added division bar

--- a/themes/ewb/scss/master.scss
+++ b/themes/ewb/scss/master.scss
@@ -4,6 +4,8 @@
 
 @import "imports/bootstrap_grid.scss";
 
+@import "imports/_division-bar.scss";
+
 /*@import "imports/nav-bar.scss";*/
 
 /*@import "imports/buttons.scss";*/
