--- a/themes/ewb/scss/imports/site.scss
+++ b/themes/ewb/scss/imports/site.scss
@@ -48,7 +48,32 @@ table {font-family: arial, verdana, sans-serif;}
 	margin: 0 auto;
 	max-width: 920px;
 	position: relative;
+	@media (max-width: 768px) {
+        width: 96%;
+    }
 }
+@media only screen and (min-width: 920px) {
+	.banner-container {
+		position: relative;
+	}
+	.banner {
+		background-repeat: no-repeat;
+		background-position: center top;
+		display: block;
+		position: absolute;
+		top: 0;
+		height: 400px;
+		width: 100%;
+	}
+	.banner-home {
+		background-image: url(../images/banner_rounded.png);
+		/*background-image: url(../images/banner_home.jpg);*/
+	}
+	.main-content {
+		margin-top: 200px;
+	}
+}
+
 
 /* HEADER
 ========================================================================== */
@@ -59,8 +84,8 @@ table {font-family: arial, verdana, sans-serif;}
 	z-index: 100;
 }
 .top-nav {
-	background: rgba(0,0,0,.25);
-	border-bottom: 1px solid rgba(255,255,255,.14);
+	background: rgba(0,0,0,.15);
+	border-bottom: 1px solid rgba(255,255,255,.12);
 }
 .top-nav ul {
 	float: right;
@@ -77,12 +102,21 @@ table {font-family: arial, verdana, sans-serif;}
 		font-size: 12px;
 		padding: 7px 5px;
 	}
+	@media (max-width: 480px) {
+        font-size: 11px;
+        margin-left: .5em;
+    }
 }
 .logo {
 	display: block;
-	position: absolute;
-	left: 0;
-	bottom: 0;
+	float: left;
+	margin-top: -18px;
+	@media (max-width: 890px) {
+        float: none;
+    }
+    @media (max-width: 385px) {
+        margin-top: 0;
+    }
 }
 .logo img {display: block;}
 .logo span {
@@ -92,20 +126,33 @@ table {font-family: arial, verdana, sans-serif;}
 	bottom: -15px;
 	width: 86px;
 	height: 15px;
+	@media (max-width: 890px) {
+        display: none;
+    }
 }
 .main-nav {
 	float: right;
-	list-style: none;
-	margin: 0;
+	& ul {
+		list-style: none;
+		margin: 0;
+	}
+	@media (max-width: 890px) {
+        clear: both;
+        float: none;
+    }
 }
 .main-nav li {
 	float: left;
-	margin: 42px 0 10px 5px;
+	margin: 42px 0 10px 15px;
 	& a {
 		color: #fff;
 		display: block;
-		font-size: 20px;
+		font-size: 18px;
 		padding: 4px 10px;
+		@media (max-width: 515px) {
+        	font-size: 13px;
+        	padding: 8px 7px;
+    	}
 	}
 	&.active a {
 		background: #fff;
@@ -115,37 +162,16 @@ table {font-family: arial, verdana, sans-serif;}
 			text-decoration: none;
 		}
 	}
+	@media (max-width: 890px) {
+        margin-top: 12px;
+        margin-left: 5px;
+    }
 }
 
 /* CONTENT
 ========================================================================== */
-.banner-container {
-	position: relative;
-}
-.banner {
-	xbackground-color: #000;
-	background-repeat: no-repeat;
-	background-position: center top;
-	xbackground-attachment: fixed;
-	display: block;
-	position: absolute;
-	top: 0;
-	height: 400px;
-	width: 100%;
-}
-.banner-home {
-	background-image: url(../images/banner_rounded.png);
-	/*background-image: url(../images/banner_home.jpg);*/
-}
-.banner span {
-	xbackground: url(../images/dots.png);
-	position: absolute;
-	height: 100%;
-	width: 100%;
-}
 .main-content {
 	background: #fff;
-	margin-top: 200px;
 	xpadding-bottom: 70px;
 	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
 	   -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
@@ -248,12 +274,3 @@ ul.inline-list > li > *, ul.link-list > li > * { display: block; }
 .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px;}
 .visuallyhidden.focusable:active,.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto;}
 .invisible { visibility: hidden;}
-
-/* Media Queries
-========================================================================== */
-@media only screen and (max-width: 767px) {
-	body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0;
-	}
-	.nav-bar { height: auto; }
-    .nav-bar > li { float: none; display: block; border-right: none; }
-}
