--- a/themes/ewb/scss/imports/site.scss
+++ b/themes/ewb/scss/imports/site.scss
@@ -35,6 +35,7 @@ h2 {
 	background: url(../images/hr.png) center bottom no-repeat;
 	font-size: 50px;
 	padding-bottom: 1.5em;
+	text-align: center;
 }
 h3 { font-size: 35px; }
 h4 { font-size: 24px; text-transform: none;}
@@ -237,19 +238,26 @@ table {font-family: arial, verdana, sans-serif;}
 .side-nav li.divider { border-top: 1px solid #e6e6e6; height: 0; padding: 0; }
 
 
-
+/* EVENTS
+========================================================================== */
+.events {
+	background: url(../images/linedpaper.png);
+	padding: 50px 0;
+}
+.events-title {
+	margin-bottom: -50px;
+	position: relative;
+}
 
 
 /* FOOTER
 ========================================================================== */
 .footer {
 	background: #05286c;
-	xmargin-top: 2em;
 	position: relative;
 }
 .footer .wrapper {
 	background: -webkit-linear-gradient(top,rgba(0,0,0,0.3) 0,rgba(0,0,0,0.1) 40px);
-	xpadding: 60px 0 40px 0;
 }
 
 
