removed flex slider since it's not being used.

--- a/themes/ewb/scss/imports/site.scss
+++ b/themes/ewb/scss/imports/site.scss
@@ -241,7 +241,7 @@ table {font-family: arial, verdana, sans-serif;}
 /* EVENTS
 ========================================================================== */
 .events {
-	background: url(../images/linedpaper.png);
+	background: url(../images/linedpaper.jpg);
 	padding: 50px 0;
 }
 .events-title {
