moved print stylesheet outside of master stylesheet

--- a/themes/ewb/scss/master.scss
+++ b/themes/ewb/scss/master.scss
@@ -14,10 +14,10 @@
 
 /*@import "imports/forms.scss";*/
 
+@import "imports/jquery.fancybox.scss";
+
 @import "imports/bootstrap_tabs.scss";
 
-@import "imports/flexslider.scss";
-
-@import "imports/print.scss";
+/*@import "imports/flexslider.scss";*/
 
 @import "imports/site.scss";
