added copyright to footer

--- a/themes/ewb/scss/imports/site.scss
+++ b/themes/ewb/scss/imports/site.scss
@@ -253,11 +253,8 @@ table {font-family: arial, verdana, sans-serif;}
 /* FOOTER
 ========================================================================== */
 .footer {
-	background: #05286c;
-	position: relative;
-}
-.footer .wrapper {
-	background: -webkit-linear-gradient(top,rgba(0,0,0,0.3) 0,rgba(0,0,0,0.1) 40px);
+	font-size: 12px;
+	margin-top: 1em;
 }
 
 
