minor css updates

--- a/themes/ewb/scss/imports/site.scss
+++ b/themes/ewb/scss/imports/site.scss
@@ -244,6 +244,7 @@ table {font-family: arial, verdana, sans-serif;}
 .committee-item a {
 	display: block;
 }
+.ghana .committee-item a {color: #fff;}
 
 
 /* Side Nav ---------------------- */
